// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResultSectionContent renders, no rules and show congrats 1`] = `<NoFailedInstancesCongrats />`;

exports[`ResultSectionContent renders, no rules, do not show congrats 1`] = `
<RuleDetailsGroup
  outcomeType="pass"
  rules={Array []}
/>
`;

exports[`ResultSectionContent renders, with some rules 1`] = `
<RuleDetailsGroup
  outcomeType="pass"
  rules={
    Array [
      Object {},
      Object {},
    ]
  }
/>
`;
